# Web_Speech_remote_control

./: .gitignore  README.md
api/: README.md  pyproject.toml
api/api/: settings.py
api/chat/: views.py
api/chat/templates/chat/: main.html
api/static/css/: main.css
api/static/js/: buttons.js  main.js  webSpeechApi.js
diagrams/connection_diagram/: connection_diagram.uxf
electron/: README.md  package-lock.json  package.json
electron/src/: index.js  renderer.js  script.js
electron_terminal_prototype/: README.md  main.js  package-lock.json
frontend/: Szablon sprawozdania.docx  script.js  strona.html  style.css
microros_ws/: README.md
microros_ws/blink_wifi/main/: actual_working.c  blink_4_5_18_19_together_wifi.c  blink_4_5_18_19_wifi.c  blink_pin_2_pwm_wifi.c  just_forward_using_twist_left_gazebo.c  main.c  simple_left_right_forward_two_pub.c
microros_ws/blink_wifi/main/backup/: rover_1_0_0.c  rover_1_1_0.c  rover_1_2_0.c  rover_1_3_0.c  test_0_1_0.c  test_0_2_0.c  test_0_3_0.c  test_0_4_0.c  (+1 more)
nlp/: README.md  app.js  commands.json  dataPrep.py  dataPrepFull.py  dataPrepTxt.py  index.html  modelPrep.ipynb  nlp.js  pyproject.toml  sentence.py
nlp/nlpModules/: modelRequest.js
ros2_ws/: README.md
web_control/: README.md  web_controling_cmd_vel.html
web_speech_api/: README.md  Web_speech_api_example.html
websocket-webrtc-django-tutorial/: README.md  pyproject.toml
websocket-webrtc-django-tutorial-test/: README.md  pyproject.toml
websocket-webrtc-django-tutorial-test/mysite/mysite/: asgi.py  settings.py
websocket-webrtc-django-tutorial/mysite/chat/: consumers.py
websocket-webrtc-django-tutorial/mysite/mysite/: asgi.py  settings.py
websocket-webrtc-django-tutorial/mysite/static/js/: main.js
(+7 files in other folders)
