[tool.poetry]
name = "websocket-webrtc-django-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mysite"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
channels = {extras = ["daphne"], version = "^4.1.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
